@@ -31,7 +31,7 @@ class reiserfs : public FileSystem
 public:
 	FS get_filesystem_support( ) ;
 	void Set_Used_Sectors( Partition & partition ) ;
-	bool Create( const Glib::ustring device_path, const Partition & new_partition ) ;
+	bool Create( const Partition & new_partition ) ;
 	bool Resize( const Partition & partition_new, bool fill_partition = false ) ;
 	bool Copy( const Glib::ustring & src_part_path, const Glib::ustring & dest_part_path ) ;
 	bool Check_Repair( const Partition & partition ) ;
