@@ -78,7 +78,7 @@ void fat16::Set_Used_Sectors( Partition & partition )
 	}
 }
 	
-bool fat16::Create( const Glib::ustring device_path, const Partition & new_partition )
+bool fat16::Create( const Partition & new_partition )
 {
 	return ! Execute_Command( "mkdosfs -F16 " + new_partition .partition ) ;
 }
