@@ -88,7 +88,7 @@ void xfs::Set_Used_Sectors( Partition & partition )
 		partition .Set_Unused( free_blocks * blocksize / 512 ) ;
 }
 
-bool xfs::Create( const Glib::ustring device_path, const Partition & new_partition )
+bool xfs::Create( const Partition & new_partition )
 {
 	return ! Execute_Command( "mkfs.xfs -f " + new_partition .partition ) ;
 }
